# sky-tracer-demo

./: .dockerignore  .rules  Cargo.toml  README.md  compose.yml  justfile  traefik.yml
assets/index/: index.html
assets/index/presentation/: index.html  mcp.html  project.html  styles.css  tracing.html
crates/airport-anywhere/: Cargo.toml  Dockerfile  justfile
crates/airport-anywhere/assets/: styles.css
crates/airport-anywhere/src/: airports_service.rs  data_loader.rs  lib.rs  main.rs  openapi.rs  service.rs  services.rs
crates/airport-anywhere/src/models/: airport_loader.rs  airports_service.rs  mod.rs
crates/airport-anywhere/src/routes/: mod.rs
crates/airport-anywhere/src/ui/components/: airport_card.rs  mod.rs  search_box.rs
crates/airport-anywhere/src/ui/pages/: home.rs  mod.rs
crates/cockpit/: Cargo.toml  Dockerfile  Trunk.toml  index.html  justfile  nginx.conf  styles.css
crates/cockpit/assets/: map.js
crates/cockpit/src/: app.rs  lib.rs  main.rs  types.rs
crates/cockpit/src/components/: flight_form.rs  flight_list.rs  flight_map.rs  flight_tracker.rs  mod.rs  status_panel.rs
crates/cockpit/src/models/: mod.rs
crates/cockpit/src/services/: mod.rs
crates/delay-orama/: Cargo.toml  Dockerfile  justfile
crates/delay-orama/assets/: styles.css
crates/delay-orama/src/: app.rs  client.rs  lib.rs  main.rs  utils.rs
crates/delay-orama/src/routes/: mod.rs  pages.rs
crates/delay-orama/src/services/: delay_service.rs  mod.rs
crates/delay-orama/src/ui/components/: delay_table.rs  error_messages.rs  mod.rs  not_found.rs
crates/delay-orama/src/ui/pages/: home.rs  mod.rs
crates/flight-controller/: Cargo.toml  Dockerfile  justfile
crates/flight-controller/assets/: styles.css
crates/flight-controller/src/: app.rs  flight_service.rs  lib.rs  main.rs  openapi.rs  routes.rs  service.rs
crates/flight-controller/src/models/: mod.rs
crates/flight-controller/src/routes/: mod.rs
crates/flight-controller/src/services/: mod.rs
crates/flight-controller/src/tests/: mod.rs
crates/flight-controller/src/ui/components/: flight_table.rs  mod.rs
crates/flight-controller/src/ui/pages/: home.rs
crates/flight-map/: Cargo.toml
crates/flight-map/src/: continents.rs  geo.rs  lib.rs  map.rs  raster.rs  types.rs
crates/flight-map/src/components/: airport_pin.rs  continents.rs  grid.rs  legend.rs  map.rs  mod.rs  position_marker.rs  route_arc.rs  title.rs  types.rs
crates/flightmare-tracker/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  styles.css
crates/flightmare-tracker/src/: app.rs  config.rs  flight_with_delay.rs  grund.rs  lib.rs  main.rs
crates/flightmare-tracker/src/components/: airline_ad.rs  async_flight_list.rs  flight_list.rs  flight_with_delay.rs  grund_display.rs  hell_ad.rs  mod.rs  sarcastic_header.rs
crates/orbital-beacon/: Cargo.toml  Dockerfile  justfile  styles.css
crates/orbital-beacon/assets/: map.js  orbital.css  styles.css
crates/orbital-beacon/src/: app.rs  lib.rs  main.rs  openapi.rs  routes.rs  satellite_service.rs  service.rs  utils.rs
crates/orbital-beacon/src/models/: mod.rs
crates/orbital-beacon/src/routes/: api.rs  mod.rs
crates/orbital-beacon/src/services/: mod.rs
crates/orbital-beacon/src/ui/components/: flight_map.rs  launch_satellite.rs  mod.rs  position_display.rs  position_form.rs  satellite_list.rs
crates/orbital-beacon/src/ui/pages/: flight_position.rs  home.rs  launch.rs  mod.rs  update_status.rs
crates/sky-nexus/: Cargo.toml  Dockerfile  README.md  justfile  system-prompt.md
crates/sky-nexus/src/: app.rs  lib.rs  main.rs  openapi.rs
crates/sky-nexus/src/mcp/: mod.rs  prompts.rs  resources.rs  server.rs
crates/sky-nexus/src/mcp/tools/: airports.rs  babel.rs  datetime.rs  flights.rs  map.rs  mod.rs  satellites.rs
crates/sky-nexus/src/models/: datetime.rs
crates/sky-nexus/src/routes/: mcp.rs  mod.rs
crates/sky-nexus/src/routes/v1/: airports.rs  datetime.rs  flights.rs  mod.rs  satellites.rs
crates/sky-nexus/src/services/: airports.rs  babel.rs  datetime.rs  flights.rs  mod.rs  satellites.rs
crates/sky-tracer/: Cargo.toml
crates/sky-tracer/src/: lib.rs
crates/sky-tracer/src/airport/: mod.rs
crates/sky-tracer/src/model/: flight.rs  mod.rs  position.rs  satellite.rs
crates/sky-tracer/src/model/airport/: error.rs  mod.rs
crates/sky-tracer/src/protocol/: airports.rs  flights.rs  mod.rs  protocol.rs  satellite.rs
crates/sky-tracer/src/telemetry/: config.rs  mod.rs
crates/tower-of-babel/: Cargo.toml  Dockerfile  justfile
crates/tower-of-babel/src/: app.rs  client.rs  error.rs  lib.rs  main.rs  openapi.rs  service.rs
crates/tower-of-babel/src/routes/: api.rs  mod.rs
crates/tower-of-babel/src/services/: babel_service.rs  mod.rs
docs/: .gitignore  workspace.dsl
sky-tracer-workspace/: Sky Tracer.md
sky-tracer-workspace/concepts/: LSP.md  MCP.md  OpenTelemetry.md  Rust Axum.md  Yew WebAssembly.md
sky-tracer-workspace/features/: AI Integration.md  Airport Lookup.md  Delay Monitoring.md  Distributed Tracing.md  Flight Map.md  Flight Tracking.md  Satellite Positioning.md
sky-tracer-workspace/infrastructure/: Docker Compose.md  Jaeger.md  Traefik.md
sky-tracer-workspace/services/: Airport Anywhere.md  Cockpit.md  Delay-O-Rama.md  Flight Controller.md  Flightmare Tracker.md  Orbital Beacon.md  Sky Nexus.md  Tower of Babel.md
