[package]
name = "airport-anywhere"
version = "0.1.0"
edition = "2021"
description = "A service providing worldwide airport information and search capabilities"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["airports", "aviation", "search", "database", "web-service"]
categories = ["web-programming", "aerospace"]

[[bin]]
name = "airport-anywhere"
path = "src/main.rs"

[lib]
name = "airport_anywhere"
path = "src/lib.rs"

[features]
default = ["ssr"]
ssr = ["yew"]

[dependencies]
sky-tracer = { path = "../sky-tracer", features = ["protocol"] }
axum = "0.8"
csv = "1.3"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# SSR
yew = { version = "0.21", optional = true, features = ["ssr"] }

# Tracing
axum-tracing-opentelemetry = "0.26.1"
init-tracing-opentelemetry = { version = "0.27.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
tracing = { version = "0.1" }
