[package]
name = "airport-anywhere"
version = "0.1.0"
edition = "2021"
description = "A service providing worldwide airport information and search capabilities"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["airports", "aviation", "search", "database", "web-service"]
categories = ["web-programming", "aerospace"]

[[bin]]
name = "airport-anywhere"
path = "src/main.rs"

[lib]
name = "airport_anywhere"
path = "src/lib.rs"

[features]
default = ["ssr"]
ssr = ["yew/ssr"]

[dependencies]
# Local dependencies
sky-tracer = { path = "../sky-tracer", features = ["protocol"] }

# Workspace dependencies
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
yew = { workspace = true, optional = true, features = ["ssr"] }

# Tracing dependencies from workspace
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }

# Specific dependencies
csv = "1.3"
