[package]
name = "cockpit"
version = "0.1.0"
edition = "2021"
description = "Interactive web-based flight tracking and visualization dashboard"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["flight-tracking", "aviation", "visualization", "wasm", "web-app"]
categories = ["wasm", "web-programming", "visualization"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
leaflet = "0.4.1"
log = "0.4"
console_log = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
gloo-net = "0.4"
gloo-timers = "0.3"
gloo-utils = "0.2"
sky-tracer = { path = "../sky-tracer" }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
uuid = { version = "1.15", features = ["v4", "serde", "js"] }
js-sys = "0.3"
