[package]
name = "cockpit"
version = "0.1.0"
edition = "2021"
description = "Interactive web-based flight tracking and visualization dashboard"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["flight-tracking", "aviation", "visualization", "wasm", "web-app"]
categories = ["wasm", "web-programming", "visualization"]

[dependencies]
# Local dependencies
sky-tracer = { path = "../sky-tracer" }

# Workspace dependencies with WASM features
yew = { workspace = true, features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
uuid = { workspace = true, features = ["js"] }
tracing = { workspace = true }

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
js-sys = "0.3"

# Visualization and UI
leaflet = "0.4.1"
gloo-net = "0.4"
gloo-timers = "0.3"
gloo-utils = "0.2"

# Logging for WASM
log = "0.4"
console_log = "0.2"
