[package]
name = "delay-orama"
version = "0.1.0"
edition = "2021"
description = "Real-time flight delay monitoring and tracking service with SSR interface"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["flight-delays", "aviation", "tracking", "real-time", "ssr"]
categories = ["web-programming", "aerospace"]

[features]
default = ["ssr"]
ssr = ["yew"]

[dependencies]
futures = "0.3"
sky-tracer = { path = "../sky-tracer" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
yew = { version = "0.21", optional = true, features = ["ssr"] }

# Tracing
axum-tracing-opentelemetry = "0.26.1"
init-tracing-opentelemetry = { version = "0.27.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
tracing = { version = "0.1" }
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_28"] }
reqwest-middleware = "0.4"
