[package]
name = "delay-orama"
version = "0.1.0"
edition = "2021"
description = "Real-time flight delay monitoring and tracking service with SSR interface"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["flight-delays", "aviation", "tracking", "real-time", "ssr"]
categories = ["web-programming", "aerospace"]

[features]
default = ["ssr"]
ssr = ["yew/ssr"]

[dependencies]
# Local dependencies
sky-tracer = { path = "../sky-tracer" }

# Workspace dependencies
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
yew = { workspace = true, optional = true, features = ["ssr"] }

# Tracing dependencies from workspace
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
reqwest-tracing = { workspace = true }
reqwest-middleware = { workspace = true }

futures = "0.3"
