[package]
name = "flight-controller"
version = "0.1.0"
edition = "2021"

[features]
default = ["ssr"]
ssr = ["yew"]

[dependencies]
sky-tracer = { path = "../sky-tracer" }
axum = "0.8"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
yew = { version = "0.21", optional = true, features = ["ssr"] }
