[package]
name = "flight-controller"
version = "0.1.0"
edition = "2021"
description = "Core flight management and tracking service with position calculation capabilities"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = [
    "flight-management",
    "aviation",
    "tracking",
    "position-calculation",
    "ssr",
]
categories = ["web-programming", "aerospace", "science"]

[features]
default = ["ssr"]
ssr = ["yew"]

[dependencies]
sky-tracer = { path = "../sky-tracer" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
yew = { version = "0.21", optional = true, features = ["ssr"] }

# Tracing
axum-tracing-opentelemetry = "0.26.1"
init-tracing-opentelemetry = { version = "0.27.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
tracing = { version = "0.1" }
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_28"] }
reqwest-middleware = "0.4"
