[package]
name = "flight-controller"
version = "0.1.0"
edition = "2021"
description = "Core flight management and tracking service with position calculation capabilities"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = [
    "flight-management",
    "aviation",
    "tracking",
    "position-calculation",
    "ssr",
]
categories = ["web-programming", "aerospace", "science"]

[features]
default = ["ssr"]
ssr = ["yew/ssr"]

[dependencies]
# Local dependencies
sky-tracer = { path = "../sky-tracer" }

# Workspace dependencies
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }
reqwest = { workspace = true }
uuid = { workspace = true }
yew = { workspace = true, optional = true, features = ["ssr"] }

# Tracing dependencies from workspace
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
reqwest-tracing = { workspace = true }
reqwest-middleware = { workspace = true }
