[package]
name = "flightmare-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
console_log = "0.2"
deutsche-bahn-delay-reasons = "0.3.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
gloo-net = "0.4"
sky-tracer = { path = "../sky-tracer" }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
