[package]
name = "flightmare-tracker"
version = "0.1.0"
edition = "2021"
description = "Flight delay simulation and visualization tool with realistic delay patterns"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["flight-delays", "simulation", "visualization", "wasm", "aviation"]
categories = ["wasm", "web-programming", "simulation", "visualization"]

[dependencies]
# Workspace dependencies
yew = { workspace = true, features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
uuid = { workspace = true, features = ["js"] }

# Local dependencies
sky-tracer = { path = "../sky-tracer" }

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"

# Logging
log = "0.4"
console_log = "0.2"

# Additional specific dependencies
deutsche-bahn-delay-reasons = "0.3.0"
rand = "0.8"
getrandom = { version = "0.3", features = ["wasm_js"] }
