[package]
name = "orbital-beacon"
version = "0.1.0"
edition = "2021"
description = "Satellite tracking and position calculation service for flight path monitoring"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = [
    "satellite",
    "orbital-tracking",
    "position-calculation",
    "aviation",
    "ssr",
]
categories = ["aerospace", "science", "web-programming", "simulation"]

[features]
default = ["ssr"]
ssr = ["yew"]

[dependencies]
sky-tracer = { path = "../sky-tracer", features = ["protocol"] }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
thiserror = "1.0"

# SSR
yew = { version = "0.21", optional = true, features = ["ssr"] }

# Tracing
axum-tracing-opentelemetry = "0.26.1"
init-tracing-opentelemetry = { version = "0.27.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
tracing = { version = "0.1" }
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_28"] }
reqwest-middleware = "0.4"
