[package]
name = "orbital-beacon"
version = "0.1.0"
edition = "2021"
description = "Satellite tracking and position calculation service for flight path monitoring"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = [
    "satellite",
    "orbital-tracking",
    "position-calculation",
    "aviation",
    "ssr",
]
categories = ["aerospace", "science", "web-programming", "simulation"]

[features]
default = ["ssr"]
ssr = ["yew/ssr"]

[dependencies]
sky-tracer = { path = "../sky-tracer", features = ["protocol"] }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
thiserror = "1.0"

# SSR
yew = { workspace = true, optional = true, features = ["ssr"] }

# Tracing
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
reqwest-tracing = { workspace = true }
reqwest-middleware = { workspace = true }
