[package]
name = "sky-nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
rmcp = "0.3.1"
sky-tracer = { path = "../sky-tracer" }
reqwest = { workspace = true }
tracing = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
