[package]
name = "sky-nexus"
version = "0.1.0"
edition = "2024"
description = "Model Context Protocol server providing comprehensive aviation data services"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["aviation", "mcp", "api", "microservice", "openapi"]
categories = ["web-programming", "aerospace"]

[dependencies]
# Local dependencies
sky-tracer = { path = "../sky-tracer" }

# Workspace dependencies
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies
rmcp = { version = "0.3.2", features = [
    "macros",
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = { version = "1.0", features = ["derive", "uuid1"] }
hyper = "1.0"
hyper-util = "0.1"
anyhow = "1.0"
tower = "0.5"
http-body-util = "0.1.3"
chrono-tz = "0.10"
