[package]
name = "sky-tracer"
version = "0.1.0"
edition = "2021"

[features]
default = ["protocol"]
protocol = ["utoipa"]
telemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing",
    "tracing-subscriber",
    "tracing-opentelemetry",
]

[dependencies]
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
utoipa = { version = "5.3", optional = true, features = [
    "axum_extras",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.15", features = ["v4", "serde", "js"] }

# Telemetry dependencies
opentelemetry = { version = "0.19.0", features = ["rt-tokio"], optional = true }
opentelemetry_sdk = { version = "0.19.0", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.12.0", features = [
    "tonic",
], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "chrono",
], optional = true }
tracing-opentelemetry = { version = "0.19.0", optional = true }
