[package]
name = "sky-tracer"
version = "0.1.0"
edition = "2021"
description = "Core library and protocol definitions for the Sky Tracer flight tracking ecosystem"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = [
    "aviation",
    "protocol",
    "flight-tracking",
    "airport-data",
    "openapi",
]
categories = ["aerospace", "api-bindings", "data-structures"]

[features]
default = ["protocol"]
protocol = ["utoipa"]

[dependencies]
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
utoipa = { version = "5.3", optional = true, features = [
    "axum_extras",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.15", features = ["v4", "serde", "js"] }
