[package]
name = "sky-tracer"
version = "0.1.0"
edition = "2021"
description = "Core library and protocol definitions for the Sky Tracer flight tracking ecosystem"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = [
    "aviation",
    "protocol",
    "flight-tracking",
    "airport-data",
    "openapi",
]
categories = ["aerospace", "api-bindings", "data-structures"]

[features]
default = ["protocol"]
protocol = ["utoipa"]

[dependencies]
# Use workspace dependencies where possible
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true, optional = true, features = [
    "axum_extras",
    "chrono",
    "uuid",
] }

csv = "1.2"
thiserror = "1.0"
