[package]
name = "tower-of-babel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
reqwest = { version = "0.12", features = ["json"] }
sky-tracer = { path = "../sky-tracer" }
chrono = { version = "0.4", features = ["serde"] }

# Tracing and Middleware
tracing = "0.1"
reqwest-middleware = "0.4"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_28"] }
axum-tracing-opentelemetry = "0.26.1"
tracing-subscriber = "0.3"
init-tracing-opentelemetry = { version = "0.27.1", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
