[package]
name = "tower-of-babel"
version = "0.1.0"
edition = "2021"
description = "Flight aggregation and position service with filtering capabilities"
authors = ["Sky Tracer Team"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/chriamue/sky-tracer-demo"
keywords = ["flight-aggregation", "aviation", "api", "microservice"]
categories = ["web-programming", "aerospace"]

[dependencies]
# Local dependencies
sky-tracer = { path = "../sky-tracer" }

# Workspace dependencies
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
chrono = { workspace = true }

# Tracing dependencies from workspace
axum-tracing-opentelemetry = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
tracing = { workspace = true }
reqwest-tracing = { workspace = true }
reqwest-middleware = { workspace = true }

# Additional dependencies
thiserror = "1.0"
